
syntax = "proto3";
package member;
option go_package = "./grpc/proto";  // generated code çš„ full Go import path

message TokenAuthRequest {
  string token = 1;
}

message TokenAuthResponse {
  string memberID = 1;
}

service TokenAuthService {
  rpc VerifyAccessToken(TokenAuthRequest) returns (TokenAuthResponse) {};
}
